Align replay with oracle merge resolution